Implement domain browsing with pagination and code review fixes